--- a/04-HTML-CSS/final/index.html
+++ b/04-HTML-CSS/final/index.html
@@ -18,14 +18,12 @@
     </p>
 
     <h2>Another heading</h2>
-    <p class="second">
-      Just another paragraph
-    </p>
+    <p class="second">Just another paragraph</p>
 
-    <img
+    <!-- <img
       id="course-image"
       src="https://img-a.udemycdn.com/course/480x270/437398_46c3_9.jpg"
-    />
+    /> -->
 
     <form id="your-name">
       <h2>Your name here</h2>
